fix word spacing

--- a/css/base.css
+++ b/css/base.css
@@ -50,4 +50,5 @@ a:hover {
   max-width: 500px;
   text-align: justify;
   text-justify: inter-word;
+  word-spacing:-2px;
 }
